[package]
name = "crystal"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-show", "window-close", "window-unminimize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-maximize", "window-hide", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
reqwest = { version = "0.11", features = ["blocking"] }
tungstenite = "0.19.0"
native-tls = "0.2.11"
http = "0.2.8"
futures = "0.3.26"
futures-util = "0.3.26"
tokio-tungstenite = {version= "0.19.0", features = ["native-tls"] }
tokio = {version="1.25.0", features = ["rt-multi-thread", "rt", "macros"] }
notify = "6.0.1"
base64 = "0.21.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
